# searchpkgs

./: .gitignore  Cargo.toml  Readme.md  flake.nix  manifest.json  packages.json  versions.json
src/: main.rs
